fix whitespace on html/body

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,6 +36,10 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: $black;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 // Prevent flashing by making 'main' element hidden until after page is loaded
